force-app/main/default/objects/Calculation_Step__c/Calculation_Step__c.object-meta.xml
<CustomObject>
    <label>Calculation Step</label>
    <nameField>
        <displayFormat>STEP-{0000}</displayFormat>
        <label>Calculation Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>