force-app/main/default/objects/Calculation_Step__c/fields/Project_Calculation_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Calculation_Template__c</fullName>
    <label>Project Calculation Template</label>
    <referenceTo>Project_Calculation_Template__c</referenceTo>
    <relationshipLabel>Calculation Steps</relationshipLabel>
    <relationshipName>Calculation_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>