force-app/main/default/objects/Calculation_Step__c/fields/Step_Label__c.field-meta.xml
<CustomField>
    <fullName>Step_Label__c</fullName>
    <label>Step Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>