force-app/main/default/objects/Calculation_Step__c/fields/Store_In_Field__c.field-meta.xml
<CustomField>
    <fullName>Store_In_Field__c</fullName>
    <label>Store In Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>