force-app/main/default/objects/Calculation_Step__c/fields/Variable_Name__c.field-meta.xml
<CustomField>
    <fullName>Variable_Name__c</fullName>
    <label>Variable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>